# HomeWorks

Advanced data sampling/: Create_Table.sql  Task 1.sql  Task 2.sql  Task 3.sql
Asynchronous programming/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj
Asynchronous programming/Task 2/: Task 2.cpp  Task 2.sln  Task 2.vcxproj
Atomic customer queue/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj
Atomic customer queue/Task 2/: Task 2.cpp  Task 2.sln  Task 2.vcxproj  Task 2.vcxproj.filters
Atomic customer queue/Task 3/: Task 3.cpp  Task 3.sln  Task 3.vcxproj
Behavioral patterns/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj  log.txt
Behavioral patterns/Task 2/: Task 2.cpp  Task 2.sln  Task 2.vcxproj
Behavioral patterns/Task 3/: Task 3.cpp  Task 3.sln  Task 3.vcxproj
Blueprint Part2/: .gitignore
Blueprint Part2/Config/: DefaultEngine.ini  DefaultGame.ini
Blueprint Part2/Content/: A_CppBase.uasset  A_HubActor.uasset  CppBAse.umap
Exceptions and error handling/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj
Exceptions and error handling/Task 2/: EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  MyException.cpp  MyException.h  Parallelogram.cpp  Parallelogram.h  PrintFigure.cpp  PrintFigure.h  Quadrilateral.cpp  Quadrilateral.h  Rectangle.cpp  Rectangle.h  Rhomb.cpp  Rhomb.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Square.h  Task 2.cpp  Task 2.sln  Task 2.vcxproj  (+3 more)
Testing/01/: 01.cpp  CMakeLists.txt
Working with PostgreSQL from C++/: CMakeLists.txt  lessionfive.cpp  lessionfive.h
(+190 files in other folders)
